# discord-bot-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
