[tool.poetry]
name = "discord-bot-template"
version = "1.0.1"
description = ""
authors = ["Alex Oladele <dragid10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
discord-ext-ui = "^3.1.9"
loguru = "^0.6.0"
orjson = "^3.9.15"
py-cord = { extras = ["speed"], version = "^2.5.0" }
python-decouple = "^3.8"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"


[tool.poetry.group.test.dependencies]
mockito = "^1.5.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"

[tool.ruff]
line-length = 120

[tool.ruff.mccabe]
max-complexity = 8

[tool.black]
line-length = 120


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
